# QA-ChatBot

./: .dockerignore  Dockerfile  README.md  README_SCT.md  pyproject.toml
backend/: .env  chat_model.py  main.py  requirements.txt
frontend/: a.py  app.py  app1.py
