[project]
name = "ai-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "google-genai>=1.22.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.34.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "uvicorn>=0.34.3",
]
[tool.uv]
entrypoints = { web = "backend.main:app" }
